fix: run pipeline options getting blurred due to page spinner (#4388)
* fix: run pipeline options getting blurred due to page spinner

* fix: skipping flaky tests

--- a/src/modules/10-common/components/Page/PageSpinner.module.scss
+++ b/src/modules/10-common/components/Page/PageSpinner.module.scss
@@ -4,7 +4,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 25;
+  z-index: 20;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
 
